<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tasks"
                    android:title="@string/tasks" />
                <item
                    android:id="@+id/nav_people"
                    android:title="@string/people" />
                <item
                    android:id="@+id/nav_history"
                    android:title="@string/history" />
            </group>
        </menu>
    </item>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
